Digitalization of figure 6 A, B

--- a/src/porepy/examples/geothermal_flow/.gitignore
+++ b/src/porepy/examples/geothermal_flow/.gitignore
@@ -1,5 +1,3 @@
 *.vtk
 !model_configuration/constitutive_description/driesner_vtk_files/*.vtk
-!pressure_data_fig6A.csv
-!temperature_data_fig6A.csv
-!saturation_liq_data_fig6B.csv
+!verification_low_salt_content/*.csv
